@@ -13,7 +13,6 @@ import com.secondspin.product.service.IViewHistoryService;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -85,7 +84,7 @@ public class ViewHistoryServiceImpl extends ServiceImpl<ViewHistoryMapper, ViewH
 
         List<Integer> productIds = data.getRecords().stream()
                 .map(ViewHistory::getProductId)
-                .collect(Collectors.toList());
+                .toList();
 
         List<ProductListDTO> productList = productsService.getProductsByIdList(productIds);
 
